# samia_intern

./: .gitignore  AGENTS.md  LICENSE.md  README.md  Release_Notes.html
Drivers/BSP/Components/iis3dwb10is/: Release_Notes.html  iis3dwb10is_reg.c  iis3dwb10is_reg.h
Drivers/BSP/Components/ism330bx/: ism330bx_reg.c
Drivers/BSP/Components/lsm6dsv80x/: lsm6dsv80x_reg.c
Middlewares/ST/CircularBufferDL2/: CircularBufferDL2.c  Release_Notes.html
Middlewares/ST/STM32_BLE_Manager/: Doxyfile_STM32_BLE_Manager_MainPage.h  VTR_MISRAC2012_STM32_BLE_Manager_v2.1.0.xlsx
Middlewares/ST/eLooM/: Release_Notes.html
Projects/: Release_Notes.html
Projects/NUCLEO-H563ZI/Applications/DATALOG2_IKS4A1/: readme.html
Projects/NUCLEO-H563ZI/Applications/DATALOG2_IKS5A1/: README.md  readme.html
Projects/STM32L4R9ZI-STWIN/Applications/DATALOG2/STM32CubeIDE/ble_terminal_client/: README.md  pyproject.toml
Projects/STM32L4R9ZI-STWIN/Applications/DATALOG2/STM32CubeIDE/ble_terminal_client/st_ble_terminal/: __init__.py  cli.py  client.py  pnpl.py  protocol.py
Projects/eLooM_Components/SensorManager/: Release_Notes.html
Projects/eLooM_Components/SensorManager/Inc/: ABusIF.h  I2CBusIF.h  I3CBusIF.h  I3CBusTask.h  I3CBusTask_vtbl.h  IIS2DULPXTask.h  ILPS22QSTask.h  ILPS28QSWTask.h  ISM330BXTask.h  ISM330BXTask_vtbl.h  ISM6HG256XTask.h  LIS2DU12Task.h  LIS2DUXS12Task.h  LPS22DFTask.h  LPS22HHTask.h  LSM6DSV16BXTask.h  LSM6DSV16BXTask_vtbl.h  LSM6DSV16XTask.h  LSM6DSV320XTask.h  LSM6DSV32XTask.h  LSM6DSV80XTask.h  SMMessageParser.h
Projects/eLooM_Components/SensorManager/Src/: DUMMYSENSORTask.c  H3LIS331DLTask.c  I2CBusTask.c  I3CBusIF.c  I3CBusTask.c  IIS2DHTask.c  IIS2DLPCTask.c  IIS2DULPXTask.c  (+29 more)
Utilities/: README.md  readme.html
Utilities/cli_example/: CMakeLists.txt  README.md  Release_Notes.html  Release_Notes.md  readme.html
(+270 files in other folders)
